--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "svelte-kit dev --https --port 8080",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
-    "install-mkcert": "sh install_mkcert.sh"
+    "install_mkcert": "sh install_mkcert.sh",
+    "switch": "ln -sf package_1.0.0-next.184.json package.json; npm install"
   },
   "devDependencies": {
     "@sveltejs/kit": "1.0.0-next.168",
